@@ -4,7 +4,7 @@ use warnings;
 use 5.010;
 use utf8;
 
-our $VERSION = '3.04';
+our $VERSION = '3.05';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -613,7 +613,7 @@ B<efa-m> [B<-s> I<service>] I<tripid>
 
 =head1 VERSION
 
-version 3.04
+version 3.05
 
 =head1 DESCRIPTION
 
